--- a/style3.css
+++ b/style3.css
@@ -7,13 +7,17 @@ html, body{
 }
 .head{
     text-align: center;
+    font-family: monospace;
 }
 main{
-    max-width: 500px;
+    max-width: 800px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 100px, 50px;
+}
+.container{
+    margin: 0 auto;
+    padding: 50px;
 }
 .details{
     max-width: 500px;
@@ -24,8 +28,9 @@ main{
     box-shadow: 5px 5px 2px grey;
     background-color: whitesmoke;
     font-size: 14pt;
-    font-weight: bold;
+    font-weight: lighter;
     line-height: 1.2;
+    font-family: Arial, Helvetica, sans-serif;
 }
 a{
     font-size: 16pt;
