--- a/css/style3.css
+++ b/css/style3.css
@@ -13,7 +13,7 @@ main{
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 100px, 50px;
+    padding: 100px, 50px;
 }
 .container{
     margin: 0 auto;
@@ -38,8 +38,26 @@ a{
     cursor: pointer;
 }
 .surfOn{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 }
 a:hover{
     border-bottom: solid black 2px;
+}
+@media (max-width: 1000px){
+    .container{
+        padding: 0;
+        padding-top: 100px;
+    }
+    .details{
+        max-width: 1000px;
+        font-size: 20pt;
+        line-height: 1.2;
+    }
+    .head{
+        font-size: 30pt;
+    }
+    .surfOn{
+        font: 20pt;
+    }
 }
